--- a/templates/aggregator-deployment.yaml
+++ b/templates/aggregator-deployment.yaml
@@ -131,6 +131,8 @@ spec:
         secret:
           secretName: {{ .Values.existingRabbitSecret }}
           items:
+          - key: rabbitmq-host
+            path: rabbitmq-host
           - key: rabbitmq-username
             path: rabbitmq-username
           - key: rabbitmq-password
