--- a/templates/base-deployment.yaml
+++ b/templates/base-deployment.yaml
@@ -130,6 +130,8 @@ spec:
         secret:
           secretName: {{ .Values.existingRabbitSecret }}
           items:
+          - key: rabbitmq-host
+            path: rabbitmq-host
           - key: rabbitmq-username
             path: rabbitmq-username
           - key: rabbitmq-password
