--- a/templates/job-scheduler-deployment.yaml
+++ b/templates/job-scheduler-deployment.yaml
@@ -102,6 +102,8 @@ spec:
         secret:
           secretName: {{ .Values.existingRabbitSecret }}
           items:
+          - key: rabbitmq-host
+            path: rabbitmq-host
           - key: rabbitmq-username
             path: rabbitmq-username
           - key: rabbitmq-password
