--- a/templates/rbac.yaml
+++ b/templates/rbac.yaml
@@ -6,3 +6,7 @@ metadata:
     app: integration-manager
     chart: {{ template "integration-manager.chart" . }}
     release: {{ .Release.Name }}
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
