--- a/templates/base-configmap.yaml
+++ b/templates/base-configmap.yaml
@@ -9,6 +9,7 @@ metadata:
 data:
   application.properties: |
     #integration-manager-base specific properties
+    engine.iniFilePath=${sharedDataPath}/conf/cosmos.ini
     {{- if .Values.agent.baseUrl }}
     agent.base-url={{ .Values.agent.baseUrl }}
     {{- end }}
