--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -49,6 +49,7 @@ spec:
           {{- else }}
           path: /api/logout
           {{- end }}
+          pathType: ImplementationSpecific
         - backend:
             serviceName: {{ template "integration-manager.base.fullname" . }}
             servicePort: 8080
