Example configuration override: ```   nginxConf: |     server {
        listen      80;
        root        /usr/share/nginx/html;

        location /apidocs {
            try_files $uri /apidocs/index.html;
        }

        location /ui {
            try_files $uri /dx/index.html;
        }

        location /dx {
            try_files $uri /dx/index.html;
        }

        location /dx/404 {
            try_files $uri /dx/index.html;
        }

        location /im {
            try_files $uri /im/index.html;
        }

        location /awells-custom-path {
            try_files $uri /dx/index.html;
        }
    }
```

If not explicitly overridden, the docker image default nginx.conf will be used

--- a/templates/static-content-configmap.yaml
+++ b/templates/static-content-configmap.yaml
@@ -15,3 +15,7 @@ data:
   whitelist.json: |
     {{ .Values.staticContent.ipWhiteList | toString | indent 4 | trim }}
   {{- end }}
+  {{- if .Values.staticContent.nginxConf }}
+  nginx.conf: |
+    {{ .Values.staticContent.nginxConf | toString | indent 4 | trim  }}
+  {{- end }}
