updated authorization service name

--- a/templates/authorization-deployment.yaml
+++ b/templates/authorization-deployment.yaml
@@ -1,59 +1,59 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "integration-manager.authorizationService.fullname" . }}
+  name: {{ template "integration-manager.authorization.fullname" . }}
   labels:
     app: integration-manager
-    component: authorizationService
+    component: authorization
     chart: {{ template "integration-manager.chart" . }}
     release: {{ .Release.Name }}
 spec:
-  replicas: {{ .Values.authorizationService.replicaCount }}
-  revisionHistoryLimit: {{ .Values.authorizationService.revisionHistoryLimit }}
+  replicas: {{ .Values.authorization.replicaCount }}
+  revisionHistoryLimit: {{ .Values.authorization.revisionHistoryLimit }}
   selector:
     matchLabels:
       app: integration-manager
-      component: authorizationService
+      component: authorization
       release: {{ .Release.Name }}
   template:
     metadata:
       annotations:
         checksum/sharedconfig: {{ include (print $.Template.BasePath "/shared-configmap.yaml") . | sha256sum }}
-        checksum/baseconfig: {{ include (print $.Template.BasePath "/authorizationService-configmap.yaml") . | sha256sum }}
+        checksum/baseconfig: {{ include (print $.Template.BasePath "/authorization-configmap.yaml") . | sha256sum }}
         checksum/secrets: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
-        {{- if .Values.authorizationService.podAnnotations }}
-        {{ .Values.authorizationService.podAnnotations | toYaml | indent 8 | trim }}
+        {{- if .Values.authorization.podAnnotations }}
+        {{ .Values.authorization.podAnnotations | toYaml | indent 8 | trim }}
         {{- end }}
       labels:
         app: integration-manager
-        component: authorizationService
+        component: authorization
         chart: {{ template "integration-manager.chart" . }}
         release: {{ .Release.Name }}
-        {{- if .Values.authorizationService.extraLabels }}
-        {{ .Values.authorizationService.extraLabels | toYaml | indent 8 | trim }}
+        {{- if .Values.authorization.extraLabels }}
+        {{ .Values.authorization.extraLabels | toYaml | indent 8 | trim }}
         {{- end }}
     spec:
-      {{- if .Values.authorizationService.affinity }}
+      {{- if .Values.authorization.affinity }}
       affinity:
-        {{ .Values.authorizationService.affinity | toYaml | indent 8 | trim }}
+        {{ .Values.authorization.affinity | toYaml | indent 8 | trim }}
       {{- end }}
       serviceAccountName: {{ template "integration-manager.fullname" . }}
-      {{- if .Values.authorizationService.nodeSelector }}
+      {{- if .Values.authorization.nodeSelector }}
       nodeSelector:
-        {{ .Values.authorizationService.nodeSelector | toYaml | indent 8 | trim }}
+        {{ .Values.authorization.nodeSelector | toYaml | indent 8 | trim }}
       {{- end }}
-      {{- if .Values.authorizationService.extraInitContainers }}
+      {{- if .Values.authorization.extraInitContainers }}
       initContainers:
-        {{ tpl .Values.authorizationService.extraInitContainers . | indent 6 | trim }}
+        {{ tpl .Values.authorization.extraInitContainers . | indent 6 | trim }}
       {{- end }}
       containers:
       - name: datacloud-authorization-service
-        image: {{ .Values.authorizationService.image }}
-        imagePullPolicy: {{ .Values.authorizationService.pullPolicy }}
+        image: {{ .Values.authorization.image }}
+        imagePullPolicy: {{ .Values.authorization.pullPolicy }}
         env:
-        {{- if .Values.authorizationService.javaOpts }}
+        {{- if .Values.authorization.javaOpts }}
         - name: JAVA_OPTS
-          value: {{ .Values.authorizationService.javaOpts }}
+          value: {{ .Values.authorization.javaOpts }}
         {{- end }}
         ports:
         - containerPort: 8080
@@ -70,12 +70,12 @@ spec:
           readOnly: true
           mountPath: /etc/secrets
         readinessProbe:
-          {{ .Values.authorizationService.readinessProbe | toYaml | indent 10 | trim }}
+          {{ .Values.authorization.readinessProbe | toYaml | indent 10 | trim }}
         livenessProbe:
-          {{ .Values.authorizationService.livenessProbe | toYaml | indent 10 | trim }}
+          {{ .Values.authorization.livenessProbe | toYaml | indent 10 | trim }}
         {{- if .Values.integrationManagerBase.resources }}
         resources:
-          {{ .Values.authorizationService.resources | toYaml | indent 10 | trim }}
+          {{ .Values.authorization.resources | toYaml | indent 10 | trim }}
         {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -89,7 +89,7 @@ spec:
           name: {{ template "integration-manager.fullname" . }}-shared
       - name: im-volume
         configMap:
-          name: {{ template "integration-manager.authorizationService.fullname" . }}
+          name: {{ template "integration-manager.authorization.fullname" . }}
       - name: secret-volume
         secret:
           {{- if .Values.existingSecret }}
