updated review comment

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -360,7 +360,7 @@ spec:
           pathType: ImplementationSpecific
         - backend:
             service:
-              name: {{ template "integration-manager.base.fullname" . }}
+              name: {{ template "integration-manager.authorization.fullname" . }}
               port:
                 number: 8080
           {{- if .Values.ingress.pathVersionPrefix }}
